Improve source document viewers
